charts/dns/routes/argocd-server-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server-route
  namespace: argocd
spec:
  parentRefs:
  - name: gateway
    namespace: cloudflare-gateway
    sectionName: https
  hostnames:
  - "argocd.eupneart.com"
  rules:
  - backendRefs:
    - name: argocd-server
      namespace: argocd
      port: 443
