charts/dns/routes/dashboard-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashboard-route
  namespace: default
spec:
  parentRefs:
  - name: gateway
    namespace: cloudflare-gateway
  hostnames:
  - "dashboard.eupneart.com"
  rules:
  - backendRefs:
    - name: kubernetes-dashboard-kong-proxy
      namespace: kubernetes-dashboard
      port: 443
