charts/dns/routes/files-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: files-route
  namespace: default
spec:
  parentRefs:
  - name: gateway
    namespace: cloudflare-gateway
  hostnames:
  - "files.eupneart.com"
  rules:
  - backendRefs:
    - name: image-service-minio
      port: 9000
