charts/dns/routes/frontend-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: default
spec:
  parentRefs:
  - name: gateway
    namespace: cloudflare-gateway
  hostnames:
  - "eupneart.com"
  rules:
  - backendRefs:
    - name: frontend
      port: 8080
