charts/dns/routes/graphana-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: graphana-route
  namespace: kube-prometheus-stack
spec:
  parentRefs:
  - name: gateway
    namespace: cloudflare-gateway
  hostnames:
  - "graphana.eupneart.com"
  rules:
  - backendRefs:
    - name: kube-prometheus-stack-grafana
      namespace: kube-prometheus-stack
      port: 80
