charts/dns/routes/internal-api-gateway-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-gateway-route
  namespace: default
spec:
  parentRefs:
  - name: gateway
    namespace: cloudflare-gateway
  hostnames:
  - "api.eupneart.com"
  rules:
  - backendRefs:
    - name: api-gateway
      port: 80
