charts/dns/routes/minio-ui-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-ui-route
  namespace: default
spec:
  parentRefs:
  - name: gateway
    namespace: cloudflare-gateway
  hostnames:
  - "minio.eupneart.com"
  rules:
  - backendRefs:
    - name: image-service-minio
      port: 9001
