charts/dns/routes/prometheus-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-route
  namespace: kube-prometheus-stack
spec:
  parentRefs:
  - name: gateway
    namespace: cloudflare-gateway
  hostnames:
  - "prometheus.eupneart.com"
  rules:
  - backendRefs:
    - name: kube-prometheus-stack-prometheus
      namespace: kube-prometheus-stack
      port: 9090
